--- a/Views/Carrito/CarritoView.cshtml
+++ b/Views/Carrito/CarritoView.cshtml
@@ -3,52 +3,19 @@
     ViewData["Title"] = "CarritoView";
 }
 
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>La Cocoteca</title>
+        <link rel="icon" href="imagenes/coco.png" type="image/icon type">
 
-
-<nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #ff9060; font-family: 'Raleway', sans-serif;">
-    <a class="navbar-brand" href="#">
-        <img src="imagenes/imagotipo.png" alt="Cocoteca" width="200px" height="30px">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Categor&iacute;as
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Categoria 1</a>
-                    <a class="dropdown-item" href="#">Categoria 2</a>
-                    <a class="dropdown-item" href="#">Categoria 3</a>
-                </div>
-            </li>
-        </ul>
-
-        <form class="form-inline my-1 my-lg-1">
-            <input class="form-control mr-sm-2 w-auto" type="search" placeholder="Ej. El principito..." aria-label="Search">
-            <button class="btn btn-search my-2 my-sm-0" type="submit">Buscar</button>
-        </form>
-
-        <li class="nav-item">
-            <div class="box-1">
-                <div class="btn btn-one">
-                    <span><img src="imagenes/usuario.png" width="30px" height="30px"> Inicia sesi&oacute;n</span>
-                </div>
-            </div>
-        </li>
-        <li>
-            <a class="btn btn-light btn-circle" href="#">
-                <img class="carrito" src="imagenes/carrito.png" alt="carrito" width="30px" height="30px">
-            </a>
-        </li>
-    </div>
-</nav>
-
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <link rel=StyleSheet href="css/custom.css" type="text/css" media=screen>
+        <link rel=StyleSheet href="css/carrito.css" type="text/css" media=screen>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    </head>
 
 <div class="p-4 container-fluid">
     <div class="row justify-content-center">
