--- a/Views/Carrito/CarritoView.cshtml
+++ b/Views/Carrito/CarritoView.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "CarritoView";
+    ViewData["Title"] = "Carrito";
 }
 
     <head>
@@ -8,7 +8,6 @@
         <title>La Cocoteca</title>
         <link rel="icon" href="imagenes/coco.png" type="image/icon type">
 
-<<<<<<< HEAD
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <link rel=StyleSheet href="css/custom.css" type="text/css" media=screen>
         <link rel=StyleSheet href="css/carrito.css" type="text/css" media=screen>
@@ -17,8 +16,6 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     </head>
-=======
-
 
 
 
