--- a/Views/Carrito/CarritoView.cshtml
+++ b/Views/Carrito/CarritoView.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Cocoteca.Models.CarritoCompra>
 
 @{
-    ViewData["Title"] = "CarritoView";
+    ViewData["Title"] = "Carrito";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
