--- a/Views/Carrito/CarritoView.cshtml
+++ b/Views/Carrito/CarritoView.cshtml
@@ -19,6 +19,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
+@{decimal subtotal = 0;}
+@{ decimal total = 0;}
 <div class="p-4 container-fluid">
     <div class="row justify-content-center">
         <div class="col-12">
@@ -35,6 +37,8 @@
                         </tr>
                     </thead>
                     <tbody>
+                        @{int a = 0; }
+
                         @foreach (var item in Model)
                         {
                             <tr style="background-color:#f3f3f3">
@@ -43,50 +47,54 @@
                                 </td>
 
                                 <td style=" vertical-align:middle">
-                                    @Html.DisplayFor(modelItem => item.libro.Titulo);
-                                    @Html.DisplayFor(modelItem => item.libro.Autor);
+                                    @Html.DisplayFor(modelItem => item.libro.Titulo)
+                                    <br />
+                                    @Html.DisplayFor(modelItem => item.libro.Autor)
                                 </td>
 
                                 <td style="vertical-align:middle">
-                                    @Html.DisplayFor(modelItem => item.libro.Stock);
+                                    @Html.DisplayFor(modelItem => item.libro.Stock)
                                 </td>
                                 <td style="vertical-align:middle" class="text-center">
                                     <div class="container">
-                                        <div class="row">
+                                        <div class="info row ">
                                             <div class="col">
-                                                <button class="btn btn-sm btn-outline-dark" id="restar">-</button>
+                                                <button class="btn btn-sm btn-outline-dark restar" onclick="restarCantidad(@a, @Html.DisplayFor(modelItem => item.libro.Precio))">-</button>
                                             </div>
-                                            <div class="col"  id="Cantidad">@Html.DisplayFor(modelItem => item.conceptoCompra.Cantidad);</div>
+                                            <label class="Cantidad col">@Html.DisplayFor(modelItem => item.conceptoCompra.Cantidad)</label>
                                             <div class="col">
-                                                <button class="btn btn-sm btn-outline-dark" id="agregar">+</button>
+                                                <button class="btn btn-sm btn-outline-dark agregar" onclick="sumarCantidad(@a, @Html.DisplayFor(modelItem => item.libro.Precio))">+</button>
                                             </div>
                                         </div>
                                     </div>
                                 </td>
-                                <td style="vertical-align:middle" class="text-right">
-                                    @Html.DisplayFor(modelItem => item.libro.Precio);
-                                </td>
+                                @{decimal precio = item.libro.Precio * item.conceptoCompra.Cantidad;}
+                                @{subtotal += precio;}
+                                <td style="vertical-align:middle" class="precio text-right">@precio</td>
                                 <td style="vertical-align:middle;" class="text-right">
                                     <button class="btn btn-sm btn-outline-danger">Eliminar</button>
                                 </td>
                             </tr>
-                            <tr style="background-color:#f3f3f3">
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>Sub-Total</td>
-                                <td class="text-right">$XXXXX</td>
-                            </tr>
-                            <tr style="background-color:#f3f3f3">
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td><strong>Total</strong></td>
-                                <td class="text-right"><strong>$XXXXX</strong></td>
-                            </tr>
-                        }
+
+                                        { a++; }
+                                    }
+                        <tr style="background-color:#f3f3f3">
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>Sub-Total</td>
+                            <td class="subtotal text-right">@subtotal</td>
+                        </tr>
+                        @{ total = subtotal + 90;}
+                        <tr style="background-color:#f3f3f3">
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td><strong>Total</strong></td>
+                            <td class="total text-right"><strong>@total</strong></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -104,13 +112,43 @@
     </div>
 </div>
 
-@section scripts{ 
-    <script>
-        $("#restar").click(function () {
-            $("#Cantidad").text("resta");
+<script>
+    function restarCantidad(index, precio) {
+        var cantidad = $(".info:eq(" + index + ")").find("label:eq(0)").text();
+        if (cantidad > 0) {
+            cantidad--;
+            $(".info:eq(" + index + ")").find("label:eq(0)").text(cantidad);
+            var nuevoPrecio = precio;
+            nuevoPrecio *= cantidad;
+            $(".precio:eq(" + index + ")").text(nuevoPrecio);
 
-        $("#agregar").click(function () {
-            $("#Cantidad").text("agrega");
-});
-    </script>
+            var subtotal = $(".subtotal").text();
+            subtotal -= precio;
+            $(".subtotal").text(subtotal);
+            var total = subtotal + 90;
+            $(".total").text(total);
+            return false;
+        }
+    }
+
+    function sumarCantidad(index, precio) {
+        var cantidad = $(".info:eq(" + index + ")").find("label:eq(0)").text();
+        cantidad++;
+        $(".info:eq(" + index + ")").find("label:eq(0)").text(cantidad);
+        var nuevoPrecio = precio;
+        nuevoPrecio *= cantidad;
+        $(".precio:eq(" + index + ")").text(nuevoPrecio);
+
+        var subtotal = parseInt($(".subtotal").text());
+        subtotal += precio;
+        $(".subtotal").text(subtotal);
+
+        var total = subtotal + 90;
+        $(".total").text(total);
+        return false;
+    }
+</script>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
