--- a/Views/Carrito/CarritoView.cshtml
+++ b/Views/Carrito/CarritoView.cshtml
@@ -43,12 +43,13 @@
                                 </td>
 
                                 <td style=" vertical-align:middle">
-                                    @Html.DisplayFor(modelItem => item.libro.Titulo);
-                                    @Html.DisplayFor(modelItem => item.libro.Autor);
+                                    <span>Titulo: </span>
+                                    @Html.DisplayFor(modelItem => item.libro.Titulo)
+                                    <div><span>Autor:</span> @Html.DisplayFor(modelItem => item.libro.Autor)</div>
                                 </td>
 
                                 <td style="vertical-align:middle">
-                                    @Html.DisplayFor(modelItem => item.libro.Stock);
+                                    @Html.DisplayFor(modelItem => item.libro.Stock)
                                 </td>
                                 <td style="vertical-align:middle" class="text-center">
                                     <div class="container">
@@ -56,7 +57,7 @@
                                             <div class="col">
                                                 <button class="btn btn-sm btn-outline-dark">-</button>
                                             </div>
-                                            <div class="col">@Html.DisplayFor(modelItem => item.conceptoCompra.Cantidad);</div>
+                                            <div class="col">@Html.DisplayFor(modelItem => item.conceptoCompra.Cantidad)</div>
                                             <div class="col">
                                                 <button class="btn btn-sm btn-outline-dark">+</button>
                                             </div>
@@ -64,29 +65,29 @@
                                     </div>
                                 </td>
                                 <td style="vertical-align:middle" class="text-right">
-                                    @Html.DisplayFor(modelItem => item.libro.Precio);
+                                    @Html.DisplayFor(modelItem => item.libro.Precio)
                                 </td>
                                 <td style="vertical-align:middle;" class="text-right">
                                     <button class="btn btn-sm btn-outline-danger">Eliminar</button>
                                 </td>
                             </tr>
-                            <tr style="background-color:#f3f3f3">
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>Sub-Total</td>
-                                <td class="text-right">$XXXXX</td>
-                            </tr>
-                            <tr style="background-color:#f3f3f3">
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td><strong>Total</strong></td>
-                                <td class="text-right"><strong>$XXXXX</strong></td>
-                            </tr>
                         }
+                        <tr style="background-color:#f3f3f3">
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>Sub-Total</td>
+                            <td class="text-right">$XXXXX</td>
+                        </tr>
+                        <tr style="background-color:#f3f3f3">
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td><strong>Total</strong></td>
+                            <td class="text-right"><strong>$XXXXX</strong></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
