--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: #ff9060; font-family: 'Raleway', sans-serif;">
             <a class="navbar-brand" href="#">
-                <img src="imagenes/imagotipo.png" alt="Cocoteca" width="200px" height="30px">
+                <img src="~/imagenes/imagotipo.png" alt="Cocoteca" width="200px" height="30px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -41,13 +41,13 @@
                 <li class="nav-item">
                     <div class="box-1">
                         <div class="btn btn-one">
-                            <span><img src="imagenes/usuario.png" width="30px" height="30px"> Inicia sesi&oacute;n</span>
+                            <span><img src="~/imagenes/usuario.png" width="30px" height="30px"> Inicia sesi&oacute;n</span>
                         </div>
                     </div>
                 </li>
                 <li>
                     <a class="btn btn-light btn-circle" href="#">
-                        <img class="carrito" src="imagenes/carrito.png" alt="carrito" width="30px" height="30px">
+                        <img class="carrito" src="~/imagenes/carrito.png" alt="carrito" width="30px" height="30px">
                     </a>
                 </li>
             </div>
