--- a/Views/Carrito/CarritoView.cshtml
+++ b/Views/Carrito/CarritoView.cshtml
@@ -61,11 +61,11 @@
                                     <div class="container">
                                         <div class="info row ">
                                             <div class="col">
-                                                <button class="btn btn-sm btn-outline-dark restar" asp-action="agregarLibrosCambiados"  asp-route-conceptoLibro="@item.conceptoCompra" asp-route-sumar="false" onclick="restarCantidad(@a, @Html.DisplayFor(modelItem => item.libro.Precio))">-</button>
+                                                <button class="btn btn-sm btn-outline-dark restar" onclick="restarCantidad(@a, @Html.DisplayFor(modelItem => item.libro.Precio))">@Html.ActionLink("-", "agregarLibrosCambiados", new { conceptoLibro = item.conceptoCompra.TraCompras, compra = item.conceptoCompra.Idcompra, libro = item.conceptoCompra.Idlibro, cantidad = item.conceptoCompra.Cantidad, sumar = false })</button>
                                             </div>
                                             <label class="Cantidad col">@Html.DisplayFor(modelItem => item.conceptoCompra.Cantidad)</label>
                                             <div class="col">
-                                                <button class="btn btn-sm btn-outline-dark agregar" asp-action="agregarLibrosCambiados"  asp-route-conceptoLibro="@item.conceptoCompra" asp-route-sumar="true" onclick="sumarCantidad(@a, @Html.DisplayFor(modelItem => item.libro.Precio))">+</button>
+                                                <button class="btn btn-sm btn-outline-dark agregar" onclick="sumarCantidad(@a, @Html.DisplayFor(modelItem => item.libro.Precio))">@Html.ActionLink("+", "agregarLibrosCambiados", new { conceptoLibro = item.conceptoCompra.TraCompras, compra = item.conceptoCompra.Idcompra, libro = item.conceptoCompra.Idlibro, cantidad = item.conceptoCompra.Cantidad, sumar = true })</button>
                                             </div>
                                         </div>
                                     </div>
@@ -103,7 +103,7 @@
         <div class="rounded mx-3 mt-3 p-3 col mb-2 container" style="background-color:#FFD1BD">
             <div class="row">
                 <div class="col-sm-12  col-md-6">
-                    <button class="btn btn-lg btn-block btn-search" asp-action="agregarLibrosCambiados"  asp-route-idCarrito="@ViewData["carritoId"];" asp-route-idCliente="ViewData["clienteId"];" asp-route-total="@total">Continuar Comprando</button>
+                    <button class="btn btn-lg btn-block btn-search">@Html.ActionLink("Continuar Comprando", "actualizarCarrito", new { idCarrito = @ViewData["carritoId"], idCliente = @ViewData["clienteId"], total = total })</button>
                 </div>
                 <div class="col-sm-12 col-md-6 text-right">
                     <button class="btn btn-lg btn-block btn-pagar text-uppercase">PROCEDER AL PAGO</button>
@@ -146,11 +146,6 @@
 
         var total = subtotal + 90;
         $(".total").text(total);
-        return false;
-    }
-
-    function actualizarCarrito() {
-        
         return false;
     }
 
